discussion/kv_engine/166924/166924_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit '515dce7f4' into couchbase/cheshire-cat

* couchbase/mad-hatter:
  MB-47318: [BP] Save the 'pristine' message size when consumer buffers

Change-Id: I8f56b309a0d597b278e10293b2123b9ebbc1b88d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-12-07 14:12:51.000000000
Message: 
Uploaded patch set 3: New merge patch set was added with a new first parent relative to Patch Set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2021-12-07 14:13:09.000000000
Message: 
Patch Set 3:

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/276982/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-07 14:37:46.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/300/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/300/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/293/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33: error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
                generate_config(0),
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp.h:164:5: note: "generate_config" declared here
    static nlohmann::json generate_config();
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/293/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33:
error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/293/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/441/ : FAILURE

Compile error at ..\kv_engine\tests\testapp\testapp_dcp_consumer.cc(51): error C2660: "TestappTest::generate_config": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/307/ : FAILURE

Compile error at [2021-12-07T14:18:49.388Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/307/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/305/ : FAILURE

Compile error at [2021-12-07T14:22:08.119Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:34:
error: no matching function for call to ?DcpConsumerBufferAckTest::generate_config(int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/305/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/316/ : FAILURE

Compile error at [2021-12-07T14:16:19.040Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/316/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/307/ : FAILURE

Compile error at [2021-12-07T14:18:57.516Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/307/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/221/ : FAILURE

Compile error at [2021-12-07T14:30:20.109Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:34:
error: no matching function for call to ?DcpConsumerBufferAckTest::generate_config(int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/221/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/300/ : FAILURE

Compile error at [2021-12-07T14:31:24.741Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:34:
error: no matching function for call to ?DcpConsumerBufferAckTest::generate_config(int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/300/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13220/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
